--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 22
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '22.0.2'  # Use a stable version like 17
-          distribution: 'temurin'  # Or try another distribution if needed
+          java-version: '17'  # Use a stable version like 17
+          distribution: 'temurin'  # Specify the distribution
           cache: maven
 
       - name: Set up Maven
-        uses: actions/setup-java@v3
+        uses: sormuras/actions/setup-maven@v1
         with:
-          maven-version: '3.8.8'  # Specify the Maven version you want to use
+          maven-version: '4.0.0'  # Specify the Maven version you want to use
 
       - name: Run tests
         run: mvn clean test
