--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,16 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'  # Use a stable version like 17
-          distribution: 'temurin'  # Specify the distribution
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
 
-      - name: Set up Maven
-        uses: sormuras/actions/setup-maven@v1
-        with:
-          maven-version: '4.0.0'  # Specify the Maven version you want to use
+      - name: Install Maven
+        run: |
+          curl -sL https://www.apache.org/dyn/closer.cgi?action=download&filename=maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.zip -o maven.zip
+          Expand-Archive -Path maven.zip -DestinationPath $env:RUNNER_TEMP
+          echo "MAVEN_HOME=$env:RUNNER_TEMP\apache-maven-3.8.8" >> $env:GITHUB_ENV
+          echo "$env:RUNNER_TEMP\apache-maven-3.8.8\bin" >> $env:GITHUB_PATH
 
       - name: Run tests
         run: mvn clean test
