--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 22
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: '22'
+          distribution: 'temurin'  # Ensure this is a valid distribution
           cache: maven
 
-      - name: Install Maven
-        run: |
-          curl -sL https://www.apache.org/dyn/closer.cgi?action=download&filename=maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.zip -o maven.zip
-          Expand-Archive -Path maven.zip -DestinationPath $env:RUNNER_TEMP
-          echo "MAVEN_HOME=$env:RUNNER_TEMP\apache-maven-3.8.8" >> $env:GITHUB_ENV
-          echo "$env:RUNNER_TEMP\apache-maven-3.8.8\bin" >> $env:GITHUB_PATH
-          echo "Maven installed at $env:RUNNER_TEMP\apache-maven-3.8.8"
-          ls $env:RUNNER_TEMP\apache-maven-3.8.8\bin
+      - name: Set up Maven
+        uses: actions/setup-java@v3
+        with:
+          maven-version: '3.9.8'  # Specify the Maven version you want to use
 
       - name: Run tests
         run: mvn clean test
